# containerspec

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  release-please-config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  publish.yml
.serena/: project.yml
docs/: changelog.md  index.md
docs/api-reference/: containerspec.md
docs/getting-started/: installation.md  quick-start.md
docs/superpowers/plans/: 2026-07-21-containerspec-library.md
docs/superpowers/specs/: 2026-07-21-containerspec-library-design.md
src/containerspec/: __init__.py  backends.py  distros.py  layers.py  renderers.py  rootfs.py  spec.py  targets.py  validation.py
tests/: conftest.py  test_api.py  test_backends.py  test_build.py  test_copy_hash.py  test_dockerfile.py  test_hash.py  test_integration.py  test_layers.py  test_multistage.py  test_public_api.py  test_render_context.py  test_rootfs.py  test_scenarios.py  test_targets.py
tests/golden/: root_dockerfile.txt  rootless_apk_dockerfile.txt  rootless_apt_dockerfile.txt
