[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "containerspec"
version = "0.1.4"
description = "Fluent, content-hashed Docker image builder for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "AZX, PBC.", email = "oss@azx.io" }]
keywords = ["docker", "image", "build", "vllm", "fluent", "content-hash"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
build = ["docker>=7.2.0"]

[project.urls]
Homepage = "https://github.com/AZX-PBC-OSS/containerspec"
Repository = "https://github.com/AZX-PBC-OSS/containerspec"
Issues = "https://github.com/AZX-PBC-OSS/containerspec/issues"
Changelog = "https://github.com/AZX-PBC-OSS/containerspec/blob/main/CHANGELOG.md"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/containerspec"]

[dependency-groups]
dev = [
    "docker>=7.2.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.7",
    "mkdocstrings[python]>=1.0.6",
    "pip-audit>=2.10.1",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF", "S"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108"]

[tool.pyright]
include = ["src"]
strict = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "e2e: real-Docker integration tests (gated behind CONTAINERSPEC_E2E=1)",
]

[tool.coverage.run]
source = ["containerspec"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
